# AIArena

./: .gitignore  AIArenaProtocolSpecification  CMakeLists.txt  README
src/: CMakeLists.txt
src/AIs/: CMakeLists.txt
src/AIs/adderAI/: CMakeLists.txt  adderAI  main.cpp
src/games/: CMakeLists.txt
src/games/8BitAdderGame/: 8BitAdderGameExample  CMakeLists.txt  main.cpp
src/libraryCode/: AICommunicationInterface.cpp  AICommunicationInterface.hpp  CMakeLists.txt  SOMException.cpp  SOMException.hpp  gameEngineCommunicationInterface.cpp  gameEngineCommunicationInterface.hpp  portLocations.hpp
